# weights-and-biases-example

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
models/eurusd/: model.json
models/gbpusd/: model.json
scripts/: ci_setup_wandb.py  export_models.py  promote_best_model.py
src/wandb_demo/: data.py  predict.py  sweep.py  train.py
src/wandb_demo/tickers/: __init__.py  base.py  eurusd.py  gbpusd.py  spy.py
tests/: conftest.py  test_data.py
tests/features/: training_run.feature
tests/steps/: test_training_run.py
